--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/packages.config
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/packages.config
@@ -18,7 +18,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net47" />
   <package id="Microsoft.Azure.CognitiveServices.Knowledge.QnAMaker" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net47" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.5.0" targetFramework="net47" />
@@ -40,17 +40,16 @@
   <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net47" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net47" />
-  <package id="System.IO" version="4.1.0" targetFramework="net47" requireReinstallation="true" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Memory" version="4.5.3" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
-  <package id="System.Runtime" version="4.1.0" targetFramework="net47" requireReinstallation="true" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net47" />
   <package id="System.Runtime.Loader" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net47" requireReinstallation="true" />
-  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net47" />
 </packages>
