Split user and expert bots to allow use of permission policy (#152)
* Merged PR 3081: Fix: Context-only option from QnAMaker doesn't work.

Links: https://domoreexp.visualstudio.com/MSTeams/_workitems/edit/1960112
https://msteams-captain.visualstudio.com/xGrowth%20App%20Templates/_workitems/edit/16704

* Merged PR 3107: Update to dotnet core 3.1

- Update FAQ plus app and function app to dotnet core 3.1
- Update common project from dotnet standard 2.0 to 2.1 not possible since it is used by config app, which uses  dotnet framework.

* Merged PR 3111: Refactor FAQ plus bot code

Task : https://domoreexp.visualstudio.com/MSTeams/_workitems/edit/1908502

Refactored single bot file to multiple single responsibility classes.

* Merged PR 3114: Updating ARM template for expert/user bot

Updating ARM template for expert/user bot
Task: https://domoreexp.visualstudio.com/MSTeams/_workitems/edit/1908511

- Adding new bot service for the expert bot.
- Changing existing bot endpoint.

* Merged PR 3128: Add Migrate action to the message

Task: https://domoreexp.visualstudio.com/MSTeams/_workitems/edit/1908504

1. Added "Migrate Ticket" action for message.
2. When a SME team member invokes this action on a ticket card sent by legacy bot, the new expert bot would create a new adaptive card with this information. Post this card in the SME team chat and notify on the old ticket saying its migrated.
3. The new bot also updates he conversation id and activity id for the new ticket in table storage.
4. Removed "Add new question" from message action.

Adding the video recording to understand the flow -
[Untitled_ Oct 8, 2021 11_25 AM (2).mp4](https://msteams-captain.visualstudio.com/c0c04ee3-c2ad-40d3-8eb6-80af77f7603d/_apis/git/repositories/62659416-9895-4f84-b5b0-6386b44d13f0/pullRequests/3128/attachments/Untitled_%20Oct%208%2C%202021%2011_25%20AM%20%282%29.mp4)

* Merged PR 3146: Changing the regex for image url

Task:https://domoreexp.visualstud

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction.csproj
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AzureFunctionsVersion>v2</AzureFunctionsVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -14,17 +14,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="4.5.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Teams.Apps.FAQPlusPlus.Common\Microsoft.Teams.Apps.FAQPlusPlus.Common.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Microsoft.Teams.Apps.FAQPlusPlus.Common\Microsoft.Teams.Apps.FAQPlusPlus.Common.csproj" />
+	</ItemGroup>
   <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
