--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -1,7 +1,9 @@
 {
   "TenantId": "",
-  "MicrosoftAppId": "",
-  "MicrosoftAppPassword": "",
+  "UserAppId": "",
+  "UserAppPassword": "",
+  "ExpertAppId": "",
+  "ExpertAppPassword": "",
   "QnAMakerHostUrl": "",
   "QnAMakerSubscriptionKey": "",
   "QnAMakerApiEndpointUrl": "",
