--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
@@ -9,6 +9,8 @@
     "SearchServiceName": "",
     "SearchServiceAdminApiKey": "",
     "SearchServiceQueryApiKey": "",
-    "IsGCCHybridDeployment": false
+    "IsGCCHybridDeployment": false,
+    "ProjectName": "",
+    "DeploymentName": ""
   }
 }
