--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -23,5 +23,8 @@
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
-  "ApplicationInsightsLogLevel": ""
+  "ApplicationInsightsLogLevel": "",
+  "ProjectName": "",
+  "DeploymentName": ""
+
 }
