Updated the QnaMaker name to QuestionAnswer

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
@@ -3,8 +3,8 @@
   "Values": {
     "AzureWebJobsStorage": "",
     "AzureWebJobsDashboard": "",
-    "QnAMakerSubscriptionKey": "",
-    "QnAMakerApiUrl": "",
+    "QuestionAnswerSubscriptionKey": "",
+    "QuestionAnswerApiUrl": "",
     "StorageConnectionString": "",
     "SearchServiceName": "",
     "SearchServiceAdminApiKey": "",
