--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Web.config
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Web.config
@@ -16,10 +16,12 @@
     <add key="ida:TenantId" value="" />
     <add key="StorageConnectionString" value="" />
     <!--QnA Maker subscription key and end point to validate knowledgebase id-->
-    <add key="QnAMakerSubscriptionKey" value="" />
-    <add key="QnAMakerApiEndpointUrl" value="" />
+    <add key="QuestionAnswerSubscriptionKey" value="" />
+    <add key="QuestionAnswerApiEndpointUrl" value="" />
     <!--UPNs with permission to access the configuration app-->
     <add key="ValidUpns" value="" />
+    <add key="ProjectName" value="mtcqatest" />
+    <add key="DeploymentName" value="production" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
