--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Web.config
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Web.config
@@ -20,8 +20,8 @@
     <add key="QuestionAnswerApiEndpointUrl" value="" />
     <!--UPNs with permission to access the configuration app-->
     <add key="ValidUpns" value="" />
-    <add key="ProjectName" value="mtcqatest" />
-    <add key="DeploymentName" value="production" />
+    <add key="ProjectName" value="" />
+    <add key="DeploymentName" value="" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
