--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
@@ -10,7 +10,7 @@
     "SearchServiceAdminApiKey": "",
     "SearchServiceQueryApiKey": "",
     "IsGCCHybridDeployment": false,
-    "ProjectName": "",
+    "QuestionAnswerProjectName": "",
     "DeploymentName": ""
   }
 }
