--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Web.config
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Web.config
@@ -20,7 +20,7 @@
     <add key="QuestionAnswerApiEndpointUrl" value=""/>
     <!--UPNs with permission to access the configuration app-->
     <add key="ValidUpns" value=""/>
-    <add key="ProjectName" value=""/>
+    <add key="QuestionAnswerProjectName" value=""/>
     <add key="DeploymentName" value=""/>
   </appSettings>
   <!--
