--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -24,7 +24,6 @@
     "InstrumentationKey": ""
   },
   "ApplicationInsightsLogLevel": "",
-  "ProjectName": "",
+  "QustionAnswerProjectName": "",
   "DeploymentName": ""
-
 }
