--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Web.config
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Web.config
@@ -37,7 +37,7 @@
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation"/>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
-    <compilation debug="true"/>
+    <compilation debug="true" targetFramework="4.8"/>
   </system.web>
   <system.webServer>
     <rewrite>
